<resources>
    <string name="app_name">Dnd Experience Splitter</string>
    <string name="splash_screen_name">Dnd Exp Splitter</string>
    <string name="players">Players</string>
    <string name="categories">Categories</string>
    <string name="run_survey">Run survey</string>
    <string name="add">Add</string>
    <string name="enter_players_name">Enter player\'s name</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name_required">Name is required!</string>
    <string name="delete_question">Delete?</string>
    <string name="player_deleted">Player deleted</string>
    <string name="value">Value</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="enter_category_value">Enter category value</string>
    <string name="default_category_value">1</string>
    <string name="category_value_required">Category value must not be empty!</string>
    <string name="character_name_label">Enter character\'s name</string>
    <string name="character_name">Character name</string>
    <string name="character_name_validation_message">Character name is required</string>
    <string name="pick_players_label">Pick players to split exp</string>
    <string name="ok">OK</string>
    <string name="pick_players_validation_message">Pick some players!</string>
    <string name="current_player_label">You are: (swipe to select)</string>
    <string name="assess_player_label">Assess player:</string>
    <string name="split_button_label">Split exp!</string>
    <string name="base_exp_label">Base exp:</string>
    <string name="max_bonus_label">Max bonus:</string>
    <string name="value_is_required">Value is required!</string>
    <string name="value_must_be_a_number">Value must be a number!</string>
    <string name="game_master_label">Game master</string>
    <string name="game_master_list_label">(game master)</string>
    <string name="total_exp_label">Total exp:</string>
    <string name="bonus_exp_label">Bonus exp:</string>
    <string name="really">Really?</string>
    <string name="exit">Exit?</string>
    <string name="history_results">History results</string>
    <string name="select_all">Select all</string>
    <string name="category_already_exists_validation">Category with this name already exists!</string>
    <string name="player_name_already_exists_validation">Player with that name already exists!</string>
    <string name="player_with_character_name_already_exists_validation">Player with this character name already exists!</string>
    <string name="player_and_categories_required">You have to add some players and categories first!</string>
    <string name="lock_assessment">Lock you assessment (use after you rate everybody)</string>
    <string name="assessment_locked">Rating locked, pick another player or split exp!</string>
    <string name="lock_assessment_confirmation_title">Lock assessment?</string>
    <string name="lock_assessment_confirmation_message">Once you lock your assessment no one will be able to view this rating and it will be impossible to make changes to those ratings.</string>
    <string name="license">License</string>
</resources>
