<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_player_label"
            style="@style/text.big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_player_label" />

        <oo.max.dndexperiencesplitter.core.WrapContentViewPager
            android:id="@+id/players_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/lock_player_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_assessment" />

        <LinearLayout
            android:id="@+id/assessment_locked_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment_locked"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/assess_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <Button
            android:id="@+id/split"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/split_button_label" />

    </LinearLayout>

    <include layout="@layout/view_progress" />

</RelativeLayout>